force-app/main/default/objects/TaskTemplate__c/TaskTemplate__c.object-meta.xml
<CustomObject>
    <label>Aufgabenvorlage</label>
    <nameField>
        <label>Aufgabenvorlage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aufgabenvorlage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>