force-app/main/default/objects/TaskTemplate__c/fields/AmountOfTasks__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTasks__c</fullName>
    <label>Anzahl Aufgaben</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>