force-app/main/default/objects/TaskTemplate__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Thema</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potenzialanalyse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>